# devops-study-app

./: .pre-commit-config.yaml
.github/workflows/: backend-tests.yaml  docker-build-image.yaml  frontend-tests.yaml
src/backend/: Dockerfile  pyproject.toml
src/backend/src/data/: sessions.csv
src/frontend/: Dockerfile  pyproject.toml
